syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

import "SubmissionEvents.proto";
import "LoanApplicationRegister.proto";
import "TransmittalSheet.proto";

message LarValidatedMessage {
    LoanApplicationRegisterMessage lar = 1;
    SubmissionIdMessage submissionId = 2;
}

message TsValidatedMessage {
    TransmittalSheetMessage ts = 1;
}
